<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_longin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/f1manelogin" />


    <LinearLayout
        android:id="@+id/botoes_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fotoUsuario"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:layout_alignEnd="@+id/fotoUsuarioMore"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="5dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_user_place_holder"
                tools:ignore="VectorDrawableCompat" />


        </RelativeLayout>

        <TextView
            android:id="@+id/nomeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:text="@string/app_Mane"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="15dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        </RelativeLayout>


        <Button
            android:id="@+id/change_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="#40ffffff"
            android:text="@string/changePicture" />


        <Button
            android:id="@+id/change_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="#40ffffff"
            android:text="@string/changeName"/>
        <Button
            android:id="@+id/sing_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="#40ffffff"
            android:text="@string/log_out" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/voltar"
        android:layout_width="71dp"
        android:layout_height="63dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="#00ffffff"
        app:srcCompat="@mipmap/ic_ok_foreground" />
</RelativeLayout>