<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_longin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/f1manelogin" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:text="Fl-Mane"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:text="@string/app_subTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="15dp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/botoes_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:focusable="true"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fotoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="5dp"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            app:srcCompat="@drawable/ic_user_place_holder"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/nomeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:text="@string/app_Mane"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="15dp"
            android:textStyle="bold" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.google.android.gms.common.SignInButton
                android:id="@+id/button_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:background="#40ffffff"
                android:visibility="visible" />
            <Button
                android:id="@+id/sing_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:background="#40ffffff"
                android:text="@string/log_out"
                android:visibility="invisible" />
        </RelativeLayout>




        <Button
            android:id="@+id/srv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="#40ffffff"
            android:text="LETS RACE" />

        <!--
                <Button
                    android:id="@+id/srv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:background="#40ffffff"
                    android:text="Play on Server 2" />
        -->

        <Button
            android:id="@+id/change_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="#40ffffff"
            android:text="@string/changeName"
            android:visibility="invisible" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/exit"
        android:layout_width="71dp"
        android:layout_height="63dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="#00ffffff"
        app:srcCompat="@mipmap/ic_exit_foreground" />
</RelativeLayout>